Add builder for Mongo query runner